Fix/Nav Bar (#16)
* refactor(nav bar): add demo user button

* fix(nav bar): Fix logout button not showing when user is logged in, fix styling on nav bar component

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -16,7 +16,8 @@
 }
 
 #profile-dropdown-not-logged-in > :first-child {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.359);
+  border-bottom: 1px solid;
+  border-color: var(--color-gray-600);
   width: 6rem;
   padding-bottom: 0.5rem;
 }
